# Sentiment-Analysis-with-Naive-Bayes-Streamlit

./: .gitignore  LICENSE  Makefile  PHASE3_COMPLETE.md  PROGRESS.md  README.md  TRANSFORMATION_PLAN.md  TRANSFORMATION_STATUS.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: train.csv
notebooks/: EDA_sentiment_analysis.ipynb
scripts/: run_api.py  run_streamlit.py  train.py
src/sentiment_analysis/api/: main.py
src/sentiment_analysis/api/routes/: __init__.py  health.py  predict.py
src/sentiment_analysis/api/schemas/: __init__.py  health.py  prediction.py
src/sentiment_analysis/data/: loader.py  preprocessor.py
src/sentiment_analysis/streamlit_app/: app.py
src/sentiment_analysis/streamlit_app/components/: prediction.py  visualization.py
src/sentiment_analysis/training/: trainer.py
src/sentiment_analysis/utils/: config.py  logger.py  metrics.py
